force-app/main/default/objects/Holder_Testing_Details__c/Holder_Testing_Details__c.object-meta.xml
<CustomObject>
    <label>Holder Testing Details</label>
    <nameField>
        <label>Holder Testing Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Testing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>