force-app/main/default/objects/Holder_Testing_Details__c/fields/BodyTest__c.field-meta.xml
<CustomField>
    <fullName>BodyTest__c</fullName>
    <label>BodyTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>