force-app/main/default/objects/Holder_Testing_Details__c/fields/CapTestrewTest__c.field-meta.xml
<CustomField>
    <fullName>CapTestrewTest__c</fullName>
    <label>CapTestrewTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>