force-app/main/default/objects/Holder_Testing_Details__c/fields/ClampTest__c.field-meta.xml
<CustomField>
    <fullName>ClampTest__c</fullName>
    <label>ClampTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>