force-app/main/default/objects/Holder_Testing_Details__c/fields/CompanionFlangeTest__c.field-meta.xml
<CustomField>
    <fullName>CompanionFlangeTest__c</fullName>
    <label>CompanionFlangeTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>