force-app/main/default/objects/Holder_Testing_Details__c/fields/ExcessFlowTest__c.field-meta.xml
<CustomField>
    <fullName>ExcessFlowTest__c</fullName>
    <label>ExcessFlowTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>