force-app/main/default/objects/Holder_Testing_Details__c/fields/EyeboltsTest__c.field-meta.xml
<CustomField>
    <fullName>EyeboltsTest__c</fullName>
    <label>EyeboltsTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>