force-app/main/default/objects/Holder_Testing_Details__c/fields/GasketTest__c.field-meta.xml
<CustomField>
    <fullName>GasketTest__c</fullName>
    <label>GasketTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>