force-app/main/default/objects/Holder_Testing_Details__c/fields/GaugeTest__c.field-meta.xml
<CustomField>
    <fullName>GaugeTest__c</fullName>
    <label>GaugeTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>