force-app/main/default/objects/Holder_Testing_Details__c/fields/InletTest__c.field-meta.xml
<CustomField>
    <fullName>InletTest__c</fullName>
    <label>InletTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>