force-app/main/default/objects/Holder_Testing_Details__c/fields/JackTestrewTest__c.field-meta.xml
<CustomField>
    <fullName>JackTestrewTest__c</fullName>
    <label>JackTestrewTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>