force-app/main/default/objects/Holder_Testing_Details__c/fields/KnifebladeTest__c.field-meta.xml
<CustomField>
    <fullName>KnifebladeTest__c</fullName>
    <label>KnifebladeTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>