force-app/main/default/objects/Holder_Testing_Details__c/fields/MidFlangeTest__c.field-meta.xml
<CustomField>
    <fullName>MidFlangeTest__c</fullName>
    <label>MidFlangeTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>