force-app/main/default/objects/Holder_Testing_Details__c/fields/NutTest__c.field-meta.xml
<CustomField>
    <fullName>NutTest__c</fullName>
    <label>NutTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>