force-app/main/default/objects/Holder_Testing_Details__c/fields/OutletTest__c.field-meta.xml
<CustomField>
    <fullName>OutletTest__c</fullName>
    <label>OutletTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>