force-app/main/default/objects/Holder_Testing_Details__c/fields/RingTest__c.field-meta.xml
<CustomField>
    <fullName>RingTest__c</fullName>
    <label>RingTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>