force-app/main/default/objects/Holder_Testing_Details__c/fields/StudsTest__c.field-meta.xml
<CustomField>
    <fullName>StudsTest__c</fullName>
    <label>StudsTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>