force-app/main/default/objects/Holder_Testing_Details__c/fields/TeeHandTest__c.field-meta.xml
<CustomField>
    <fullName>TeeHandTest__c</fullName>
    <label>TeeHandTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>