force-app/main/default/objects/Holder_Testing_Details__c/fields/TestCode__c.field-meta.xml
<CustomField>
    <fullName>TestCode__c</fullName>
    <label>TestCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>