force-app/main/default/objects/Holder_Testing_Details__c/fields/Text1Val__c.field-meta.xml
<CustomField>
    <fullName>Text1Val__c</fullName>
    <label>Text1Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>