force-app/main/default/objects/Holder_Testing_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TeeHandTest__c</columns>
    <columns>TestCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NutTest__c</columns>
    <columns>OutletTest__c</columns>
    <columns>RingTest__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>Text5Val__c</columns>
    <columns>Text6Val__c</columns>
    <columns>MidFlangeTest__c</columns>
    <columns>InletTest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>